--- a/css/custom.css
+++ b/css/custom.css
@@ -7,7 +7,7 @@
   color: #E12B00;
   text-decoration: underline;
   border: none;
-};
+}
 
 .schedule a:active {
   color: red;
@@ -78,7 +78,6 @@
 .sticky-nav .menu li a:hover {
   border-color: #C3BFBF;
   border-bottom-width: 2px;
-  margin-top: 4px;
   margin-bottom: 2px;
 }
 
@@ -87,4 +86,44 @@
   border-bottom-width: 2px;
   margin-top: 2px;
   margin-bottom: 2px;
+}
+@media screen and (min-width: 350px) and (max-width: 440px)
+{
+  #DevPrograms{
+    height: 90vh;
+  }
+}
+@media screen and (min-width: 290px) and (max-width: 350px)
+{
+  #DevPrograms{
+      height: 115vh;
+  }
+}
+
+@media screen and (min-width: 240px) and (max-width: 290px)
+{
+  #DevPrograms{
+    height: 120vh;
+  }
+}
+
+@media screen and (max-width: 240px)
+{
+  #DevPrograms{
+    height: 180vh;
+  }
+}
+
+/*css classes for hiding and showing Donation and regular supporter parts in donate.html*/
+.appear{
+  display: block;
+}
+.hide{
+  display: none;
+}
+.baddition{
+  margin-left:  600px;
+}
+.background-image {
+  width: 100%;
 }
